--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.18.2",
     "mongodb": "^5.2.0",
     "mongoose": "^5.13.17",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "slugify": "^1.6.6"
   },
   "engines": {
     "node": ">=10.0.0"
