--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mongodb": "^5.2.0",
     "mongoose": "^5.13.17",
     "morgan": "^1.9.1",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "validator": "^13.9.0"
   },
   "engines": {
     "node": ">=10.0.0"
