--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js"
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "debug": "sudo ndb server.js"
   },
   "author": "Ramses Mata",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongodb": "^5.2.0",
+    "mongodb": "^5",
     "mongoose": "^5.13.17",
     "morgan": "^1.9.1",
     "slugify": "^1.6.6",
