--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "author": "Ramses Mata",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "mongodb": "^5",
-    "mongoose": "^5.13.17",
-    "morgan": "^1.9.1",
-    "slugify": "^1.6.6",
-    "validator": "^13.9.0"
+    "dotenv": "~16.0.3",
+    "express": "~4.18.2",
+    "mongodb": "~5",
+    "mongoose": "~5.13.17",
+    "morgan": "~1.9.1",
+    "slugify": "~1.6.6",
+    "validator": "~13.9.0"
   },
   "engines": {
     "node": ">=10.0.0"
