--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "natorus",
   "version": "1.0.0",
   "description": "learning node, express and mongoDB",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
-    "debug": "sudo ndb server.js"
+    "debug": "nodedev server.js"
   },
   "author": "Ramses Mata",
   "license": "ISC",
   "dependencies": {
+    "debug": "^4.3.4",
+    "debugger": "^1.0.0",
     "dotenv": "~16.0.3",
     "express": "~4.18.2",
     "mongodb": "~5",
