--- a/config.env
+++ b/config.env
@@ -4,4 +4,6 @@ DATABASE=mongodb+srv://ramses:<PASSWORD>@cluster0.mdtgbob.mongodb.net/natours?re
 DATABASE_LOCAL=mongosh "mongodb://localhost:27017/natours"
 DATABASE_PASSWORD=ramses
 
+JWT_SECRET=ramses-mata-hernandez-mexico-mva
+JWT_EXPIRES_IN=90d
 
