--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debugger": "^1.0.0",
     "dotenv": "~16.0.3",
     "express": "~4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "~5",
     "mongoose": "~5.5.2",
     "morgan": "~1.9.1",
